Scrollbar edited + Undefined BUG fixed.

--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,26 @@ body {
     padding: 0;
 }
 
+* {
+    outline: none;
+}
+
+::-webkit-scrollbar {
+	width:10px;
+}
+
+::-webkit-scrollbar-track {
+	background:#242324;
+}
+
+::-webkit-scrollbar-thumb {
+	background:rgb(29, 31, 34);
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background:#191a1d;
+}
+
 #video-grid {
     display: flex;
     justify-content: center;
